fix: add condition for getNotes about loading to avoid several equal requests, add flex-wrap for images wrapper for correct  display of many images

--- a/src/app/pages/notes-page/components/note/note.component.less
+++ b/src/app/pages/notes-page/components/note/note.component.less
@@ -19,6 +19,7 @@
   display: flex;
   justify-content: center;
   gap: 10px;
+  flex-wrap: wrap;
 }
 :host ::ng-deep .p-image-preview-indicator,
 :host ::ng-deep .p-image-preview-container,
